--- a/src/app/components/balance/balance.component.html
+++ b/src/app/components/balance/balance.component.html
@@ -1,1 +1,8 @@
-<p>balance works</p>
+<!-- One way Binding -->
+<h1> {{ title }} </h1>
+
+<p>Balance Works</p>
+
+<!-- Two way Binding -->
+<p>Searching for {{ search }}</p>
+<input type="text" [(ngModel)]="search" />
