Angular: Definición y uso d parámetros de componente - @Input()

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="content">
-  <app-balance />
+  <app-balance title="Input del component"/>
+  <app-balance title="2 component"/>
 </div>
 
 <!-- <router-outlet></router-outlet> -->
