Angular: Definición y uso de atributo del componente basado en una interface

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="content">
-  <app-balance title="Input del component"/>
-  <app-balance title="2 component"/>
+  <app-balance/>
 </div>
 
 <!-- <router-outlet></router-outlet> -->
